--- a/exo_decoupage.html
+++ b/exo_decoupage.html
@@ -7,10 +7,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="public/css/style.css">
   <title>Découpage HTML</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <!-- 
+  
 ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
 ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
 ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
@@ -58,15 +61,13 @@
       <div id="champs_newsletter">
         <div>
             <span>Du texte</span>
-            <input type="text">
+            <input type="text" placeholder="  eMail">
             <button>S'inscrire</button>
         </div>
       </div>
       
     </section>
-<!-- LA FIN DE LA TETE DE CACTUS -->
 
-<!-- LES MEMBRES DU CACTUS -->
     <nav>
       <div class="logo">
         <img src="public/images/logo.jpg" alt="mon_image">
@@ -75,28 +76,28 @@
       <div class="menu">
         <ul>
           <li>
-            <a href="">lien1</a>
+            <a href="">lien 1</a>
           </li>
           <li>
-            <a href="">lien2</a>
+            <a href="">lien 2</a>
           </li>
           <li>
-            <a href="">lien3</a>
+            <a href="">lien 3</a>
           </li>
           <li>
-            <a href="">lien4</a>
+            <a href="">lien 4</a>
           </li>
           <li>
-            <a href="">lien5</a>
+            <a href="">lien 5</a>
           </li>
           <li>
-            <a href="">lien6</a>
+            <a href="">lien 6</a>
           </li>
           <li>
-            <a href="">lien7</a>
+            <a href="">lien 7</a>
           </li>
           <li>
-            <a href="">lien8</a>
+            <a href="">lien 8</a>
           </li>
         </ul>
       </div>
@@ -104,6 +105,8 @@
     </nav>
     
   </header>
+<!-- LA FIN DE LA TETE DE CACTUS -->
+
 <!-- LES MEMBRES DU CACTUS -->
   <section id="contenu">
     <h1>Molengeek</h1>
@@ -125,7 +128,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur numquam ipsum omnis error aliquid amet accusantium
       eligendi sint similique atque harum laborum sit deleniti mollitia minus, dolorem non, reiciendis placeat!</p>
   </section>
+<!-- LES MEMBRES DU CACTUS -->
 
+<!-- LE PIED DU CACTUS -->
   <footer>
     <section id="section" class="section">
       <div>
@@ -147,9 +152,10 @@
         </a>
       </div>
     </section>
-    <img src="" alt="">
+    <img src="public/images/molengeek.png" alt="">
     <p>salut le footer</p>
   </footer>
-</body>
+  <!-- LE PIED DU CACTUS -->
 
+</body>
 </html>
